--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,6 +45,14 @@ h1 {
     z-index: 2;
     font-size: 28px;
 }
+a {
+    color: rgb(255, 228, 107);
+}
+a:hover {
+    color: rgb(255, 124, 107);
+    background-color: transparent;
+    text-decoration: underline;
+}
 .version {
     position: absolute;
     color: white;
@@ -148,12 +156,15 @@ h1 {
     width: 100%;
     height: auto;
     color: white;
-    font-size: 40px; /* Adjust the font-size as needed */
+    font-size: 30px; /* Adjust the font-size as needed */
     text-shadow: 2px 2px 2px black;
     z-index: 4;
     display: none;
     transition: opacity 0.75s ease, transform 0.5s ease;
     text-align: left;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 .highlighted-credit {
     color: rgb(255, 228, 107);
@@ -239,12 +250,47 @@ h1 {
     align-items: center;
     justify-content: space-between;
 }
+.options-volumewrapper2 {
+    position: absolute;
+    top: 6vw;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+}
 .options-volumecontainer {
     display: flex;
     align-items: center;
     justify-content: flex-end; /* Start from the right side */
     right: 0;
 }
+.options-audioleft,
+.options-audioright {
+    position: relative;
+    color: white;
+    z-index: 4;
+    width: 7vw;
+    height: 7vh;
+    display: none;
+    cursor: pointer;
+    transition: opacity 0.75s ease, transform 0.5s ease;
+}
+.options-volumewrapper2 .audioname {
+    position: relative;
+    color: white;
+    z-index: 4;
+    width: 4vw;
+    display: none;
+    font-size: 30px;
+    text-shadow: 2px 2px 2px black;
+    transition: opacity 0.75s ease, transform 0.5s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #kurukuru {
     width: 169px;
     height: 169px;
